--- a/presentation/presentation_1.tex
+++ b/presentation/presentation_1.tex
@@ -237,20 +237,21 @@
 		An \emph{alphabet} \alphabet{} is a finite set of symbols $\{a_1, a_2, a_3, \ldots a_n\}$
 	\end{definition}
 	
-	
+	\onslide<2-> {
 	\begin{definition}[Words]
 		A \emph{string} (or \emph{word}) is a sequence of symbols. The length of a word is the number of symbols in the sequence.
 	\end{definition}
+	}
 	
-	
-	\begin{definition}[Formal language]
+	\onslide<3-> {
+		\begin{definition}[Formal language]
 		Let $\alphabetpow{i}$ denote the set of the words created from the symbols of \alphabet{} that has length i. 
 		
 		Let $\alphabetpow{*}$ denote $\alphabetSymbol^0 \cup \alphabetSymbol^1 \cup \ldots$, which in other words is the set of finite sequences created by the symbols of the alphabet.
 	
 		We call the set $ \languagesymbol{}$ a \emph{formal language} if $\languagesymbol{} \subseteq \alphabetpow{*}$
 	\end{definition}
-	
+	}
 	
 \end{frame}
 
@@ -277,7 +278,7 @@
 	}
 	\only<3> {
 		\begin{definition}[Power of languages]
-			let $\languagepow{0} = \{ \emptyword \}$ and $\languagepow{i+1} = \languagepow{i} \concatop \languagesymbol$
+			let $\languagepow{0} = \{ \emptyword \}$ and $\languagepow{i+1} = \languagesymbol \concatop \languagepow{i} $
 		\end{definition}
 	}
 	\only<4> {
@@ -493,22 +494,27 @@ def appendToAll( l: List[List[T]],
 	\begin{theorem}[Null Concatenation - Right]
 		$\forall \languagei{} \subseteq \alphabetpow{*}. ~ \languagei{} \concatop \emptyset = \emptyset$
 	\end{theorem}
-	
+	\onslide<2-> {
+		
 	\begin{theorem}[Null Concatenation - Left]
 		$\forall \languagei{} \subseteq \alphabetpow{*}. ~ \emptyset \concatop \languagei{} = \emptyset$
 	\end{theorem}
-	
+	}
+	\onslide<3-> {
+		
 	\begin{theorem}[Unit Concatenation - Right]
 		\label{the:rightUnitConcat}
 		$\forall \languagei{} \subseteq \alphabetpow{*}.$ we have  $\languagei{} \concatop \unitlang = \languagei{}$
 		%$\unitlang \concatop \languagei{} = \languagei{}$
 	\end{theorem}
-	
+	}
+	\onslide<4-> {
+		
 	\begin{theorem}[Unit Concatenation - Left]
 		\label{the:leftUnitConcat}
 		$\forall \languagei{} \subseteq \alphabetpow{*}.$ we have $\unitlang \concatop \languagei{} = \languagei{}$
 	\end{theorem}
-	
+	}
 \end{frame}
 
 \begin{frame}{Equivalence Lemmas}
@@ -533,13 +539,12 @@ def appendToAll( l: List[List[T]],
 \end{frame}
 
 \begin{frame}{Associativity}
-	\begin{itemize}
-		\item $\forall \languagesymbol \in \alphabetpow{*}.$ 	$\languagesymbol \concatop \unitlang = \unitlang \concatop \languagesymbol = \languagesymbol$.
-		\item Is $(\alphabetpow{*};\concatop)$ a monoid?
-		\onslide<2->{\item Yes, associativity holds.}
-	\end{itemize}
+%	\begin{itemize}
+%		\item $\forall \languagesymbol \in \alphabetpow{*}.$ 	$\languagesymbol \concatop \unitlang = \unitlang \concatop \languagesymbol = \languagesymbol$.
+%		\item Is $(\alphabetpow{*};\concatop)$ a monoid?
+%		\onslide<2->{\item Yes, associativity holds.}
+%	\end{itemize}
 	
-	\onslide<3->{
 	\begin{theorem}[Associativity]
 		\label{the:associativity}
 		For every $\languagei{1}, \languagei{2}, \languagei{3} \subseteq \alphabetpow{*}$ we have $(\languagei{1} \concatop \languagei{2}) \concatop \languagei{3}  = \languagei{1} \concatop ( \languagei{2} \concatop \languagei{3} )$
@@ -548,21 +553,31 @@ def appendToAll( l: List[List[T]],
 	
 	\begin{proof}
 		\begin{enumerate}
+	\onslide<2->{
 		\item $((\setof{hd} \cup tl) \concatop \languagei{2}) \concatop \languagei{3}$ = applying the distributive law
-					 
+	}
+	\onslide<3->{				 
 		\item $((\setof{hd} \concatop \languagei{2}) \cup (tl \concatop \languagei{2})) \concatop \languagei{3}$ = applying the distributive law
 					 
-		\item $((\setof{hd} \concatop \languagei{2}) \concatop \languagei{3}) \cup ((tl \concatop \languagei{2}) \concatop \languagei{3})$ = applying induction
+		}
+		\onslide<4->{				 
+			\item $((\setof{hd} \concatop \languagei{2}) \concatop \languagei{3}) \cup ((tl \concatop \languagei{2}) \concatop \languagei{3})$ = applying induction
 					 
-		\item $((\setof{hd} \concatop \languagei{2}) \concatop \languagei{3}) \cup (tl \concatop (\languagei{2} \concatop \languagei{3}))$ = cheating
+		}
+		\onslide<5->{				 
+			\item $((\setof{hd} \concatop \languagei{2}) \concatop \languagei{3}) \cup (tl \concatop (\languagei{2} \concatop \languagei{3}))$ = cheating
 					 
-		\item $(\setof{hd} \concatop (\languagei{2} \concatop \languagei{3})) \cup (tl \concatop (\languagei{2} \concatop \languagei{3}))$ = applying the distributive law
+		}
+		\onslide<6->{				 
+			\item $(\setof{hd} \concatop (\languagei{2} \concatop \languagei{3})) \cup (tl \concatop (\languagei{2} \concatop \languagei{3}))$ = applying the distributive law
 					 
-		 \item $(\setof{hd} \cup tl) \concatop (\languagei{2} \concatop \languagei{3})$
+		 }
+		 \onslide<7->{				 
+		 	\item $(\setof{hd} \cup tl) \concatop (\languagei{2} \concatop \languagei{3})$
+		 }
 		\end{enumerate}
 	
 	\end{proof}
-	}
 \end{frame}
 
 \begin{frame}{Cheating?}
@@ -725,6 +740,8 @@ And so on...
 \subsection{Implementation}
 
 \begin{frame}[fragile]{Implementation}
+	
+	How to represent RegExes in Scala?
 	
 	Instead of these constant use any language as building block, but limit their number to 2
 	
@@ -913,7 +930,7 @@ For every regular expression $\regex$ defined over the languages $\languagei{1},
 		\begin{itemize}
 			\item 95 functions (methods and lemmas)
 			\item 651 verified conditions
-			\item 1670.178s of total time for verification (longest: 241.744s)
+			\item 5127.148s of total time for verification (longest: 318.947s)
 			\item 1936.337s of total time for checking termination 
 		\end{itemize}
 		
