one slide removed from pres

--- a/presentation/presentation_1.tex
+++ b/presentation/presentation_1.tex
@@ -204,16 +204,16 @@
 \end{frame}
 
 
-\begin{frame}
-\frametitle{Introduction}
-
-\begin{itemize}
-	\item Formal Languages
-	\item Regular Expressions
-	\item Deterministic Finite Automaton
-\end{itemize}
-
-\end{frame}
+%\begin{frame}
+%\frametitle{Introduction}
+%
+%\begin{itemize}
+%	\item Formal Languages
+%	\item Regular Expressions
+%	\item Deterministic Finite Automaton
+%\end{itemize}
+%
+%\end{frame}
 
 \begin{frame}
 \frametitle{Overview} % Table of contents slide, comment this block out to remove it
